# BlendBridge

./: .gitignore  README.md  export.ps1  export.sh  pyproject.toml
addon/: __init__.py  ops.py  panel.py  preferences.py  registry.py  router.py  server.py
addon/handlers/: __init__.py  _deps.py  blendgenerators_handler.py  blendgmsh_handler.py  export.py  render.py  scene.py  selection.py
blendbridge/: __init__.py
blendbridge/client/: __init__.py  cli.py  client.py  exceptions.py  launcher.py
docs/: architecture.md  client_api.md  headless_mode.md  installation.md  writing_handlers.md
examples/: 01_hello_blender.py  03_batch_export.py  04_render_farm.py  05_headless_launch.py  06_error_handling.py  07_contrib_generators.py  08_spring_generator.py
scripts/: build_addon_zip.py  install_zmq_blender.py
tests/manual/: smoke_phase2.py
tests/unit/: conftest.py  test_cli.py  test_client.py  test_client_convenience.py  test_handlers_export_paths.py  test_handlers_scene.py  test_launcher.py  test_registry.py  test_router.py  test_server.py  test_smoke.py
